# huggingface_text_summary_v5

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  summarize_cli.py  summarizer.py
src/hf_text_summary/: __init__.py  analysis.py  cli.py  text_extract.py
tests/: test_analysis.py
